<resources>
    <string name="app_name">My Flashcards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_web_client_id">778052437982-pe7eei2d2cg0koi01oapl62vt1rnga8v.apps.googleusercontent.com</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="email_required">Email is required</string>
    <string name="valid_email_required">Valid email is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="google_sign_in_failed">Google sign in failed: %1$s</string>
    <string name="continue_as_guest">Continue as a Guest</string>

    <!-- Newly added strings -->
    <string name="delete_confirmation_message">Are you sure you want to delete this group and all its cards?</string>
    <string name="delete_confirmation_positive">Yes</string>
    <string name="delete_confirmation_negative">No</string>
    <string name="empty_group_message">The group is empty. Please add some terms.</string>
    <string name="insufficient_terms_message">The group must contain more than 5 terms to start the quiz. Please add more terms.</string>
    <string name="empty_group_positive">OK</string>
    <string name="no_card_groups">No card groups available</string>
    <string name="language_not_supported">Language is not supported</string>
    <string name="tts_initialization_failed">TextToSpeech initialization failed</string>
    <string name="tts_initialized_successfully">TextToSpeech initialized successfully</string>
    <string name="question_number">Question Number: %d</string>
    <string name="correct_number">Correct Answers: %d</string>
    <string name="wrong_number">Wrong Answers: %d</string>
    <string name="unknown_error">Unknown error</string>
    <string name="add_card">Add Card</string>
    <string name="term_hint">Term</string>
    <string name="definition_hint">Definition</string>
    <string name="add_button">Add</string>
    <string name="group_name_hint">Group Name</string>
    <string name="practice">Practice</string>
    <string name="quiz">Quiz</string>
    <string name="welcome_text">Welcome!</string>
    <string name="no_card_groups_message">Click the + button to add a new card group.</string>
    <string name="quiz_screen">Quiz Screen</string>
    <string name="results">Results:</string>
    <string name="question_count">Question Count:</string>
    <string name="correct_count">Correct Count:</string>
    <string name="wrong_count">Wrong Count:</string>
    <string name="return_to_main">Return to Main Menu</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="group_name">Group Name</string>
    <string name="exit_confirmation_message">Do you really want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_button">Save</string>
    <string name="settings_title">Settings</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="social_media_accounts">Follow us on Social Media</string>
    <string name="logout_button">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>

</resources>
