<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/termEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/term_hint" />

    <EditText
        android:id="@+id/definitionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/definition_hint" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/save_button"
        app:cornerRadius="7dp" />
</LinearLayout>
