<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Sign In View -->
    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon_logo" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/signInEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signInPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/sign_in"
            android:textColor="@color/secondary_color" />

        <TextView
            android:id="@+id/goToSignUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/dont_have_account"
            android:textColor="@android:color/holo_blue_dark" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginButtonGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/guestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/continue_as_guest"
            android:textColor="@color/secondary_color" />
    </LinearLayout>

    <!-- Sign Up View -->
    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon_logo" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/signUpEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signUpPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/sign_up"
            android:textColor="@color/secondary_color" />

        <TextView
            android:id="@+id/goToSignInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/already_have_account"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
