<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.QuizFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/background_color"
        android:onClick="onBackPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back_button" />

    <LinearLayout
        android:id="@+id/card_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/quiz_screen"
            android:textColor="@color/secondary_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/quizTermTextView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/secondary_color"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/quizDescTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/secondary_color"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/quizDescTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/secondary_color"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/quizDescTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/secondary_color"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/quizDescTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/secondary_color"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCardView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_alternates_semibold"
                android:gravity="center"
                android:text="@string/results"
                android:textColor="@color/secondary_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/questionNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_alternates_medium"
                android:gravity="center"
                android:text="@string/question_count"
                android:textColor="@color/secondary_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/correctNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_alternates_medium"
                android:gravity="center"
                android:text="@string/correct_count"
                android:textColor="@color/secondary_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wrongNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_alternates_medium"
                android:gravity="center"
                android:text="@string/wrong_count"
                android:textColor="@color/secondary_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/return_to_main"
                android:textColor="@color/secondary_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
