<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color"
    tools:context=".ui.view.SettingsFragment">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:text="@string/settings_title"
            android:textColor="@color/secondary_color"
            android:textSize="34sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:elevation="5dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/settings_cardview_color"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/soundTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@string/sound_effects"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switchSound"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switchSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:textColor="@color/primary_color"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/soundTextView"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/settings_cardview_color"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="5dp">

                <TextView
                    android:id="@+id/nightModeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@string/dark_mode"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switchNightMode"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switchNightMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:textColor="@color/primary_color"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/nightModeText"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:text="@string/social_media_accounts"
            android:textColor="@color/secondary_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/linkedInLogoView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/icon_linkedin_logo" />

            <ImageView
                android:id="@+id/instagramLogoView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/icon_instagram_logo" />

            <ImageView
                android:id="@+id/facebookLogoView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/icon_facebook_logo" />

            <ImageView
                android:id="@+id/xLogoView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/icon_x_logo" />
        </LinearLayout>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/logout_button"
            android:textColor="@color/secondary_color" />

    </LinearLayout>

    <ImageView
        android:id="@+id/backImageButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/icon_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
